refactor: refactor to fix sonar reported issues (#122)
* refactor: refactor to fix sonar reported issues

* docs: add links to sonarcloud in README.md

* docs: style fixes in README.md